pulling data, not updating

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="100"
+        android:text="@string/temperature_value"
         android:textColor="@android:color/background_light"
         android:textSize="150sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="At 5:00 PM it will be"
+        android:text="@string/time_value_number"
         android:textColor="@color/halfWhite"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/temperature_value"
@@ -59,7 +59,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Louisville, KY"
+        android:text="@string/location"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/time_value"
@@ -97,7 +97,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:paddingTop="15dp"
-        android:text="HUMIDITY"
+        android:text="@string/humidity_label"
         android:textColor="@color/halfWhite"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintHorizontal_bias="0.55"
@@ -111,7 +111,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="0.88"
+        android:text="@string/humidity_level"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/humidity_label"
@@ -125,7 +125,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:paddingTop="15dp"
-        android:text="RAIN/SNOW?"
+        android:text="@string/precip_label_name"
         android:textColor="@color/halfWhite"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.53"
@@ -139,7 +139,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="70%"
+        android:text="@string/precip_percentage"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/precip_label"
